# trail_wetness_index

./: .gitignore  compare_gfs_gdas.ipynb  dask.ipynb  gfs.ipynb  gfs_gdas.ipynb  gfs_gdas_sfcanl.ipynb  gridmet.ipynb  main.py  nsidc-download_SPL4SMGP.008_2025-06-08.py  precip_comparison.ipynb  prism.ipynb  prism_cog.ipynb  pyproject.toml  requirements.txt  smap.ipynb  smap_ea.ipynb  smops.ipynb  soils.ipynb  soils.py  tmi.ipynb  trail_moisture.py  trails.ipynb  trails_processing.py  trails_processing_bbox.py  trails_sc.ipynb  trails_us.ipynb  twi.ipynb
