[project]
name = "can-i-ride-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cfgrib>=0.9.15.0",
    "folium>=0.19.6",
    "ipykernel>=6.29.5",
    "mapclassify>=2.9.0",
    "matplotlib>=3.10.3",
    "owslib>=0.33.0",
    "pyrosm>=0.6.2",
    "rioxarray>=0.19.0",
    "s3fs>=2025.5.1",
    "xarray>=2025.4.0",
]
