[project]
name = "can-i-ride-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "adlfs>=2024.12.0",
    "cartopy>=0.24.1",
    "cfgrib>=0.9.15.0",
    "dask[complete]>=2025.5.1",
    "earthaccess>=0.14.0",
    "folium>=0.19.6",
    "h5netcdf>=1.6.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "mapclassify>=2.9.0",
    "matplotlib>=3.10.3",
    "netcdf4>=1.7.2",
    "owslib>=0.33.0",
    "planetary-computer>=1.0.0",
    "pyrosm>=0.6.2",
    "pystac-client>=0.8.6",
    "rioxarray>=0.19.0",
    "s3fs>=2025.5.1",
    "xarray>=2025.4.0",
    "zarr>=3.0.8",
]
